--- a/.github/workflows/docker-converter.yml
+++ b/.github/workflows/docker-converter.yml
@@ -64,10 +64,11 @@ jobs:
           IMAGE_TAG=$(echo $IMAGE_TAG | cut -d',' -f1)
           echo "Testing image: $IMAGE_TAG"
           docker run --rm --entrypoint="" $IMAGE_TAG python3 --version
-          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import torch; print('PyTorch:', torch.__version__)"
-          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import transformers; print('Transformers:', transformers.__version__)"
-          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import tensorflow as tf; print('TensorFlow:', tf.__version__)"
-          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import onnx; print('ONNX:', onnx.__version__)"
+          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import torch; print('✅ PyTorch:', torch.__version__)"
+          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import transformers; print('✅ Transformers:', transformers.__version__)"
+          # Suppress TensorFlow CUDA warnings by setting TF_CPP_MIN_LOG_LEVEL=2
+          docker run --rm -e TF_CPP_MIN_LOG_LEVEL=2 --entrypoint="" $IMAGE_TAG python3 -c "import tensorflow as tf; print('✅ TensorFlow:', tf.__version__)"
+          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import onnx; print('✅ ONNX:', onnx.__version__)"
           docker run --rm --entrypoint="" $IMAGE_TAG test -f /axon/scripts/convert_huggingface.py && echo "✅ Conversion scripts present"
           echo "✅ All dependencies verified"
 
