--- a/.github/workflows/docker-converter.yml
+++ b/.github/workflows/docker-converter.yml
@@ -11,7 +11,7 @@ on:
         default: 'latest'
 
 permissions:
-  contents: read
+  contents: write
   packages: write
 
 jobs:
@@ -64,13 +64,66 @@ jobs:
           IMAGE_TAG=$(echo $IMAGE_TAG | cut -d',' -f1)
           echo "Testing image: $IMAGE_TAG"
           docker run --rm --entrypoint="" $IMAGE_TAG python3 --version
-          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import torch; print('PyTorch:', torch.__version__)"
-          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import transformers; print('Transformers:', transformers.__version__)"
-          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import tensorflow as tf; print('TensorFlow:', tf.__version__)"
-          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import onnx; print('ONNX:', onnx.__version__)"
+          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import torch; print('✅ PyTorch:', torch.__version__)"
+          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import transformers; print('✅ Transformers:', transformers.__version__)"
+          # Suppress TensorFlow CUDA warnings by setting TF_CPP_MIN_LOG_LEVEL=2
+          docker run --rm -e TF_CPP_MIN_LOG_LEVEL=2 --entrypoint="" $IMAGE_TAG python3 -c "import tensorflow as tf; print('✅ TensorFlow:', tf.__version__)"
+          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import onnx; print('✅ ONNX:', onnx.__version__)"
           docker run --rm --entrypoint="" $IMAGE_TAG test -f /axon/scripts/convert_huggingface.py && echo "✅ Conversion scripts present"
           echo "✅ All dependencies verified"
 
       - name: Image digest
         run: |
           echo "Image digest: ${{ steps.build.outputs.digest }}"
+
+      - name: Save Docker images as OCI artifacts
+        if: github.event_name == 'release'
+        run: |
+          VERSION="${{ github.event.release.tag_name }}"
+          # Extract version without 'v' prefix
+          VERSION=${VERSION#v}
+          IMAGE_TAG="${{ steps.meta.outputs.tags }}"
+          # Extract first tag (comma-separated list)
+          IMAGE_TAG=$(echo $IMAGE_TAG | cut -d',' -f1)
+          echo "Saving image $IMAGE_TAG as OCI artifacts for both platforms..."
+          
+          # Pull and save linux/amd64 image
+          echo "Pulling linux/amd64 image from registry..."
+          docker pull --platform linux/amd64 $IMAGE_TAG
+          docker save $IMAGE_TAG | gzip > axon-converter-${VERSION}-linux-amd64.tar.gz
+          echo "✅ Saved: axon-converter-${VERSION}-linux-amd64.tar.gz ($(du -h axon-converter-${VERSION}-linux-amd64.tar.gz | cut -f1))"
+          
+          # Pull and save linux/arm64 image
+          echo "Pulling linux/arm64 image from registry..."
+          docker pull --platform linux/arm64 $IMAGE_TAG
+          docker save $IMAGE_TAG | gzip > axon-converter-${VERSION}-linux-arm64.tar.gz
+          echo "✅ Saved: axon-converter-${VERSION}-linux-arm64.tar.gz ($(du -h axon-converter-${VERSION}-linux-arm64.tar.gz | cut -f1))"
+          
+          echo ""
+          echo "All OCI artifacts:"
+          ls -lh axon-converter-*.tar.gz
+
+      - name: Upload OCI artifacts to release
+        if: github.event_name == 'release'
+        uses: softprops/action-gh-release@v1
+        with:
+          files: axon-converter-*.tar.gz
+          tag_name: ${{ github.event.release.tag_name }}
+          draft: false
+          prerelease: false
+          body: |
+            Docker images are also available as OCI artifacts attached to this release.
+            
+            **To load the image (choose the appropriate platform):**
+            \`\`\`bash
+            # For linux/amd64:
+            docker load < axon-converter-${VERSION}-linux-amd64.tar.gz
+            
+            # For linux/arm64:
+            docker load < axon-converter-${VERSION}-linux-arm64.tar.gz
+            \`\`\`
+            
+            **Or pull from registry (Docker will automatically select the correct platform):**
+            \`\`\`bash
+            docker pull ghcr.io/mlos-foundation/axon-converter:${VERSION}
+            \`\`\`
