--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -234,3 +234,12 @@ jobs:
           draft: false
           prerelease: false
 
+      - name: Trigger Docker Converter Workflow
+        run: |
+          echo "🚀 Triggering Docker converter workflow for v${{ steps.get_version.outputs.version }}"
+          gh api repos/${{ github.repository }}/dispatches \
+            -X POST \
+            -f event_type='build-docker-image' \
+            -f client_payload='{"version": "${{ steps.get_version.outputs.version }}", "tag": "v${{ steps.get_version.outputs.version }}"}'
+          echo "✅ Docker converter workflow triggered"
+
