fix: Correct repository_dispatch API call format
- Use separate fields for client_payload instead of JSON string
- Fixes 422 error when dispatching build-docker-image event

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -240,6 +240,7 @@ jobs:
           gh api repos/${{ github.repository }}/dispatches \
             -X POST \
             -f event_type='build-docker-image' \
-            -f client_payload='{"version": "${{ steps.get_version.outputs.version }}", "tag": "v${{ steps.get_version.outputs.version }}"}'
+            -f client_payload[version]="${{ steps.get_version.outputs.version }}" \
+            -f client_payload[tag]="v${{ steps.get_version.outputs.version }}"
           echo "✅ Docker converter workflow triggered"
 
