--- a/.github/workflows/docker-converter.yml
+++ b/.github/workflows/docker-converter.yml
@@ -79,18 +79,24 @@ jobs:
       - name: Test Docker image
         run: |
           # Test that the image works and has all dependencies (override entrypoint for testing)
-          # Use the locally built image from the build step
+          # Pull the image from registry first (multi-platform builds don't create local runnable image)
           IMAGE_TAG="${{ steps.meta.outputs.tags }}"
-          # Extract first tag (comma-separated list)
-          IMAGE_TAG=$(echo $IMAGE_TAG | cut -d',' -f1)
+          # Extract first tag (tags are newline-separated, not comma-separated)
+          IMAGE_TAG=$(echo "$IMAGE_TAG" | head -n1 | tr -d '[:space:]')
           echo "Testing image: $IMAGE_TAG"
-          docker run --rm --entrypoint="" $IMAGE_TAG python3 --version
-          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import torch; print('✅ PyTorch:', torch.__version__)"
-          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import transformers; print('✅ Transformers:', transformers.__version__)"
+          
+          # Pull the image for the current platform (GitHub Actions runs on linux/amd64)
+          echo "Pulling image for testing..."
+          docker pull --platform linux/amd64 "$IMAGE_TAG"
+          
+          # Test dependencies (override entrypoint for testing)
+          docker run --rm --platform linux/amd64 --entrypoint="" "$IMAGE_TAG" python3 --version
+          docker run --rm --platform linux/amd64 --entrypoint="" "$IMAGE_TAG" python3 -c "import torch; print('✅ PyTorch:', torch.__version__)"
+          docker run --rm --platform linux/amd64 --entrypoint="" "$IMAGE_TAG" python3 -c "import transformers; print('✅ Transformers:', transformers.__version__)"
           # Suppress TensorFlow CUDA warnings by setting TF_CPP_MIN_LOG_LEVEL=2
-          docker run --rm -e TF_CPP_MIN_LOG_LEVEL=2 --entrypoint="" $IMAGE_TAG python3 -c "import tensorflow as tf; print('✅ TensorFlow:', tf.__version__)"
-          docker run --rm --entrypoint="" $IMAGE_TAG python3 -c "import onnx; print('✅ ONNX:', onnx.__version__)"
-          docker run --rm --entrypoint="" $IMAGE_TAG test -f /axon/scripts/convert_huggingface.py && echo "✅ Conversion scripts present"
+          docker run --rm --platform linux/amd64 -e TF_CPP_MIN_LOG_LEVEL=2 --entrypoint="" "$IMAGE_TAG" python3 -c "import tensorflow as tf; print('✅ TensorFlow:', tf.__version__)"
+          docker run --rm --platform linux/amd64 --entrypoint="" "$IMAGE_TAG" python3 -c "import onnx; print('✅ ONNX:', onnx.__version__)"
+          docker run --rm --platform linux/amd64 --entrypoint="" "$IMAGE_TAG" test -f /axon/scripts/convert_huggingface.py && echo "✅ Conversion scripts present"
           echo "✅ All dependencies verified"
 
       - name: Image digest
@@ -137,21 +143,21 @@ jobs:
           VERSION="${{ steps.release_info.outputs.version }}"
           TAG_NAME="${{ steps.release_info.outputs.tag_name }}"
           IMAGE_TAG="${{ steps.meta.outputs.tags }}"
-          # Extract first tag (comma-separated list)
-          IMAGE_TAG=$(echo $IMAGE_TAG | cut -d',' -f1)
+          # Extract first tag (tags are newline-separated, not comma-separated)
+          IMAGE_TAG=$(echo "$IMAGE_TAG" | head -n1 | tr -d '[:space:]')
           echo "Saving image $IMAGE_TAG as OCI artifacts for both platforms..."
           
           # Pull and save linux/amd64 image
           echo "Pulling linux/amd64 image from registry..."
-          docker pull --platform linux/amd64 $IMAGE_TAG
-          docker save $IMAGE_TAG | gzip > axon-converter-${VERSION}-linux-amd64.tar.gz
-          echo "✅ Saved: axon-converter-${VERSION}-linux-amd64.tar.gz ($(du -h axon-converter-${VERSION}-linux-amd64.tar.gz | cut -f1))"
+          docker pull --platform linux/amd64 "$IMAGE_TAG"
+          docker save "$IMAGE_TAG" | gzip > "axon-converter-${VERSION}-linux-amd64.tar.gz"
+          echo "✅ Saved: axon-converter-${VERSION}-linux-amd64.tar.gz ($(du -h "axon-converter-${VERSION}-linux-amd64.tar.gz" | cut -f1))"
           
           # Pull and save linux/arm64 image
           echo "Pulling linux/arm64 image from registry..."
-          docker pull --platform linux/arm64 $IMAGE_TAG
-          docker save $IMAGE_TAG | gzip > axon-converter-${VERSION}-linux-arm64.tar.gz
-          echo "✅ Saved: axon-converter-${VERSION}-linux-arm64.tar.gz ($(du -h axon-converter-${VERSION}-linux-arm64.tar.gz | cut -f1))"
+          docker pull --platform linux/arm64 "$IMAGE_TAG"
+          docker save "$IMAGE_TAG" | gzip > "axon-converter-${VERSION}-linux-arm64.tar.gz"
+          echo "✅ Saved: axon-converter-${VERSION}-linux-arm64.tar.gz ($(du -h "axon-converter-${VERSION}-linux-arm64.tar.gz" | cut -f1))"
           
           echo ""
           echo "All OCI artifacts:"
