--- a/.github/workflows/docker-converter.yml
+++ b/.github/workflows/docker-converter.yml
@@ -147,20 +147,51 @@ jobs:
           IMAGE_TAG=$(echo "$IMAGE_TAG" | head -n1 | tr -d '[:space:]')
           echo "Saving image $IMAGE_TAG as OCI artifacts for both platforms..."
           
-          # Pull and save linux/amd64 image
-          echo "Pulling linux/amd64 image from registry..."
-          docker pull --platform linux/amd64 "$IMAGE_TAG"
-          docker save "$IMAGE_TAG" | gzip > "axon-converter-${VERSION}-linux-amd64.tar.gz"
-          echo "✅ Saved: axon-converter-${VERSION}-linux-amd64.tar.gz ($(du -h "axon-converter-${VERSION}-linux-amd64.tar.gz" | cut -f1))"
+          # Function to save image with progress indication
+          save_image() {
+            local platform=$1
+            local output_file=$2
+            echo "📦 Pulling $platform image from registry..."
+            docker pull --platform "$platform" "$IMAGE_TAG" || return 1
+            
+            echo "💾 Saving $platform image (this may take several minutes for large images)..."
+            local start_time=$(date +%s)
+            
+            # Save and compress with progress indication
+            # Use docker save with explicit platform to ensure correct image
+            docker save "$IMAGE_TAG" 2>/dev/null | gzip > "$output_file" &
+            local save_pid=$!
+            
+            # Show progress while saving
+            while kill -0 $save_pid 2>/dev/null; do
+              sleep 5
+              if [ -f "$output_file" ]; then
+                local size=$(du -h "$output_file" 2>/dev/null | cut -f1)
+                echo "   ⏳ Compressing... (current size: ${size:-unknown})"
+              fi
+            done
+            
+            wait $save_pid
+            local exit_code=$?
+            local end_time=$(date +%s)
+            local duration=$((end_time - start_time))
+            
+            if [ $exit_code -eq 0 ] && [ -f "$output_file" ]; then
+              local final_size=$(du -h "$output_file" | cut -f1)
+              echo "✅ Saved $platform: $output_file (${final_size}, took ${duration}s)"
+              return 0
+            else
+              echo "❌ Failed to save $platform image"
+              return 1
+            fi
+          }
           
-          # Pull and save linux/arm64 image
-          echo "Pulling linux/arm64 image from registry..."
-          docker pull --platform linux/arm64 "$IMAGE_TAG"
-          docker save "$IMAGE_TAG" | gzip > "axon-converter-${VERSION}-linux-arm64.tar.gz"
-          echo "✅ Saved: axon-converter-${VERSION}-linux-arm64.tar.gz ($(du -h "axon-converter-${VERSION}-linux-arm64.tar.gz" | cut -f1))"
+          # Save both platforms
+          save_image "linux/amd64" "axon-converter-${VERSION}-linux-amd64.tar.gz"
+          save_image "linux/arm64" "axon-converter-${VERSION}-linux-arm64.tar.gz"
           
           echo ""
-          echo "All OCI artifacts:"
+          echo "📋 All OCI artifacts:"
           ls -lh axon-converter-*.tar.gz
 
       - name: Upload OCI artifacts to release
