--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -235,6 +235,8 @@ jobs:
           prerelease: false
 
       - name: Trigger Docker Converter Workflow
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           echo "🚀 Triggering Docker converter workflow for v${{ steps.get_version.outputs.version }}"
           gh api repos/${{ github.repository }}/dispatches \
