--- a/docker/Dockerfile.converter
+++ b/docker/Dockerfile.converter
@@ -1,65 +1,52 @@
-# Multi-Framework ONNX Converter Docker Image
-FROM python:3.11-slim
+# =============================================================================
+# Axon ONNX Converter Image
+# =============================================================================
+# Lightweight image for ONNX model conversion.
+# Uses axon-base as foundation, only adds conversion scripts.
+#
+# Build time: ~10 seconds (vs ~15 minutes without base image)
+#
+# Usage: docker build -t ghcr.io/mlos-foundation/axon-converter:latest -f docker/Dockerfile.converter .
+# =============================================================================
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    git \
-    curl \
-    build-essential \
-    && rm -rf /var/lib/apt/lists/*
+# Use the base image with all ML dependencies pre-installed
+ARG BASE_IMAGE=ghcr.io/mlos-foundation/axon-base:latest
+FROM ${BASE_IMAGE}
 
-# Install all Python ML frameworks for ONNX conversion
-RUN --mount=type=cache,target=/root/.cache/pip \
-    pip install --upgrade pip && \
-    # Install protobuf first (TensorFlow 2.13+ requires protobuf < 4.21)
-    pip install "protobuf<4.21,>=3.20" && \
-    # Install TensorFlow first (before PyTorch to avoid CUDA conflicts)
-    pip install tensorflow>=2.13.0 \
-                tensorflow-hub>=0.15.0 \
-                tf2onnx>=1.15.0 && \
-    # Install PyTorch CPU-only to avoid CUDA conflicts
-    pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu && \
-    # Install Hugging Face with ONNX export support
-    pip install transformers>=4.30.0 \
-                optimum[exporters,onnxruntime]>=1.16.0 \
-                accelerate>=0.20.0 && \
-    # Install ModelScope
-    pip install modelscope>=1.9.0 && \
-    # Install ONNX tools
-    pip install onnx>=1.14.0 \
-    onnxruntime>=1.18.0 \
-                onnxscript>=0.1.0 && \
-    # Install additional ML frameworks
-    pip install scikit-learn>=1.3.0 \
-                skl2onnx>=1.16.0 \
-                xgboost>=2.0.0 \
-                onnxmltools>=1.12.0 && \
-    # Install utilities
-    pip install numpy>=1.24.0 \
-                pillow>=10.0.0 \
-                requests>=2.31.0 && \
-    # Clean pip cache
-    pip cache purge || true
+# Build arguments
+ARG BUILD_DATE
+ARG VERSION=3.0.3
 
-# Create conversion scripts directory
+# =============================================================================
+# Conversion Scripts
+# =============================================================================
+# This is the only thing that changes between converter releases
+
+# Create scripts directory
 WORKDIR /axon/scripts
 
 # Copy conversion scripts
 COPY scripts/conversion/ /axon/scripts/
 
 # Make scripts executable
-RUN chmod +x /axon/scripts/*.py
+RUN chmod +x /axon/scripts/*.py 2>/dev/null || true
 
 # Set working directory for model conversion
 WORKDIR /axon/cache
 
-# Default entrypoint
+# Default entrypoint - run python scripts
 ENTRYPOINT ["python3"]
 
+# =============================================================================
 # Metadata
+# =============================================================================
 LABEL org.opencontainers.image.title="Axon ONNX Converter"
-LABEL org.opencontainers.image.description="Docker image for ONNX model conversion with all ML frameworks"
-LABEL org.opencontainers.image.version="1.0.0"
+LABEL org.opencontainers.image.description="Docker image for ONNX model conversion (all ML frameworks)"
+LABEL org.opencontainers.image.version="${VERSION}"
+LABEL org.opencontainers.image.created="${BUILD_DATE}"
 LABEL org.opencontainers.image.source="https://github.com/mlOS-foundation/axon"
 LABEL org.opencontainers.image.url="https://github.com/mlOS-foundation/axon"
 LABEL org.opencontainers.image.vendor="mlOS Foundation"
+
+# Version file for easy checking
+RUN echo "${VERSION}" > /axon/CONVERTER_VERSION
