--- a/.github/workflows/docker-converter.yml
+++ b/.github/workflows/docker-converter.yml
@@ -95,6 +95,11 @@ jobs:
             BUILD_DATE=${{ github.event.repository.updated_at }}
             VERSION=${{ steps.version_info.outputs.version }}
 
+      # NOTE: Package visibility must be set to 'public' manually via GitHub UI (one-time setup)
+      # Go to: https://github.com/orgs/mlOS-foundation/packages/container/axon-converter/settings
+      # Click: Change visibility → Public
+      # This is required because GITHUB_TOKEN cannot modify package visibility
+
       - name: Test Docker image
         run: |
           # Test that the image works and has all dependencies (override entrypoint for testing)
