fix: Remove double 'v' prefix in release tag name for workflow_dispatch
When version input already has 'v' prefix (e.g., v3.1.2), the workflow
was creating tag_name as 'vv3.1.2'. Now we strip the 'v' prefix from
the input before adding it back, ensuring correct tag format.

Fixes: https://github.com/mlOS-foundation/axon/releases/tag/vv3.1.2

--- a/.github/workflows/docker-converter.yml
+++ b/.github/workflows/docker-converter.yml
@@ -182,8 +182,9 @@ jobs:
               TAG_NAME=${REF#refs/tags/}
               VERSION=${TAG_NAME#v}
             elif [ -n "${{ github.event.inputs.version }}" ] && [ "${{ github.event.inputs.version }}" != "latest" ]; then
-              # Use provided version input
+              # Use provided version input (strip 'v' prefix if present to avoid double 'v')
               VERSION="${{ github.event.inputs.version }}"
+              VERSION=${VERSION#v}  # Remove 'v' prefix if present
               TAG_NAME="v${VERSION}"
             else
               echo "⚠️  No release tag found. Skipping OCI artifact upload."
